<resources>
    <string name="app_name">LoginPage</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="not_registered">Not Registered</string>
    <string name="registered">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="create_account">CREATE ACCOUNT</string>
</resources>
